--- a/rockpaperscissors.html
+++ b/rockpaperscissors.html
@@ -9,10 +9,6 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <div class="container">
-        <button id="rock">Rock</button>
-        <button id="paper">Paper</button>
-        <button id="scissors">Scissors</button>
-    </div>
+    <div class="container"></div>
 </body>
 </html>
